INCLUDES = -I$(top_srcdir)/src/common/container -I$(top_srcdir)/src/common/form \
	-I$(top_srcdir)/src/database -I$(top_srcdir)/src/database/flytec6015 -I$(top_srcdir)/src/images \
	$(all_includes)
METASOURCES = AUTO
lib_LIBRARIES = libflytec6015.a
libflytec6015_a_SOURCES = AcousticFrame6015.ui AcousticFrame6015Impl.cpp CorrFrame6015.ui \
	CorrFrame6015Impl.cpp DeviceFrame6015.ui DeviceFrame6015Impl.cpp DisplayFrame6015.ui \
	DisplayFrame6015Impl.cpp \
	Frame6015.cpp GPSFrame6015.ui GPSFrame6015Impl.cpp \
	IFlytec6015Config.cpp MainFrame6015.ui MainFrame6015Impl.cpp MemoryFrame6015.ui MemoryFrame6015Impl.cpp \
	UnitFrame6015.ui UnitFrame6015Impl.cpp VarioFrame6015.ui VarioFrame6015Impl.cpp VelocityFrame6015.ui \
	VelocityFrame6015Impl.cpp
